# deeplayer

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  LICENSE  PLAN.md  README.md  SETUP.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: ci.yml  release.yml
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/java/com/deeplayer/: Deeplayer.kt  MainActivity.kt
app/src/main/java/com/deeplayer/di/: AppModule.kt
app/src/main/java/com/deeplayer/ui/: MainViewModel.kt  TrackListScreen.kt
app/src/main/java/com/deeplayer/ui/navigation/: DeeplaterNavigation.kt
app/src/main/java/com/deeplayer/ui/player/: MiniPlayerBar.kt  NowPlayingScreen.kt
app/src/main/java/com/deeplayer/ui/search/: SearchScreen.kt
app/src/main/java/com/deeplayer/ui/settings/: SettingsScreen.kt
app/src/main/java/com/deeplayer/ui/theme/: Theme.kt
app/src/main/res/drawable/: ic_pause.xml  ic_play.xml
app/src/main/res/values/: strings.xml  themes.xml
core/contracts/: build.gradle.kts
core/contracts/src/main/java/com/deeplayer/core/contracts/: AlignmentOrchestrator.kt  AudioPreprocessor.kt  InferenceEngine.kt  LyricsAligner.kt  Models.kt  PlayerService.kt  WhisperTranscriber.kt
core/player/: build.gradle.kts
core/player/src/main/: AndroidManifest.xml
core/player/src/main/java/com/deeplayer/core/player/: EmbeddedLyricsReader.kt  FakePlayerService.kt  FolderPreferences.kt  MediaStoreScanner.kt  PlaybackService.kt  PlayerModule.kt  PlayerServiceImpl.kt  TrackDao.kt  TrackDatabase.kt
core/player/src/test/java/com/deeplayer/core/player/: FakePlayerServiceTest.kt  MediaStoreScannerTest.kt  PlaybackLifecycleTest.kt
docs/: TODO.md  karpathy-review-2026-02-18.md  ui-spec.md
feature/alignment-orchestrator/: build.gradle.kts
feature/alignment-orchestrator/src/main/java/com/deeplayer/feature/alignmentorchestrator/: AlignmentOrchestratorImpl.kt  AlignmentResultSerializer.kt  FakeAlignmentOrchestrator.kt  TranscriptionLyricsMatcher.kt
feature/alignment-orchestrator/src/test/java/com/deeplayer/feature/alignmentorchestrator/: AlignmentOrchestratorImplTest.kt  PipelineIntegrationTest.kt  TranscriptionLyricsMatcherTest.kt
feature/audio-preprocessor/: build.gradle.kts
feature/audio-preprocessor/src/main/cpp/: CMakeLists.txt  audio_decoder.cpp  audio_decoder.h  audio_preprocessor_jni.cpp  mel_spectrogram.cpp  mel_spectrogram.h  resampler.cpp  resampler.h
feature/audio-preprocessor/src/main/java/com/deeplayer/feature/audiopreprocessor/: AndroidAudioPreprocessor.kt  FakeAudioPreprocessor.kt  NativeAudioPreprocessor.kt
feature/audio-preprocessor/src/test/java/com/deeplayer/feature/audiopreprocessor/: AudioPreprocessorTest.kt  FakeAudioPreprocessorTest.kt
feature/audio-preprocessor/src/test/resources/: mel_440hz_ground_truth.json
feature/inference-engine/: build.gradle.kts
feature/inference-engine/src/main/cpp/: CMakeLists.txt  whisper_jni.cpp
feature/inference-engine/src/main/java/com/deeplayer/feature/inferenceengine/: DeviceCapabilityDetector.kt  FakeInferenceEngine.kt  FakeWhisperTranscriber.kt  InferenceEngineFactory.kt  InferenceEngineModule.kt  LiteRtInferenceEngine.kt  OnnxInferenceEngine.kt  WhisperCppTranscriber.kt  WhisperNative.kt
feature/inference-engine/src/test/java/com/deeplayer/feature/inferenceengine/: DeviceCapabilityDetectorTest.kt  FakeInferenceEngineTest.kt  InferenceEngineFactoryTest.kt  LiteRtInferenceEngineTest.kt  OnnxInferenceEngineTest.kt  OnnxModelBuilder.kt
feature/lyrics-aligner/: build.gradle.kts
feature/lyrics-aligner/src/main/java/com/deeplayer/feature/lyricsaligner/: FakeLyricsAligner.kt  LyricsAlignerImpl.kt
feature/lyrics-ui/: build.gradle.kts
feature/lyrics-ui/src/main/java/com/deeplayer/feature/lyricsui/: AlignmentProgressIndicator.kt  LyricsEditor.kt  LyricsLineHighlighter.kt  OffsetAdjuster.kt  SyncedLyricsView.kt
feature/lyrics-ui/src/test/java/com/deeplayer/feature/lyricsui/: LyricsEditorTest.kt  (+1 more)
gradle/: libs.versions.toml
gradle/detekt/: detekt.yml
scripts/: build_whisper_host.sh  download_whisper_model.sh  export_whisper_phoneme_model.py  fetch_test_lyrics.sh  pyproject.toml  test_alignment.sh
(+26 files in other folders)
